# pyopenxr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-package.yml
doc/source/: api.rst  index.rst  install.rst
docs/: .buildinfo  genindex.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  support.html  xr.api_layer.html  xr.api_layer.linux.html  xr.api_layer.windows.html  xr.ext.html  xr.extension.html  xr.html  xr.library.html  xr.platform.html  xr.utils.html
docs/.doctrees/: index.doctree  install.doctree  modules.doctree  support.doctree  xr.api_layer.doctree  xr.api_layer.linux.doctree  xr.api_layer.windows.doctree  xr.ext.doctree  xr.extension.doctree  xr.library.doctree  xr.platform.doctree  xr.utils.doctree
docs/_sources/: xr.api_layer.rst.txt  xr.api_layer.windows.rst.txt  xr.ext.rst.txt  xr.platform.rst.txt  xr.rst.txt  xr.utils.rst.txt
docs/_static/: documentation_options.js
docs/source/: conf.py  index.rst  modules.rst  xr.api_layer.linux.rst  xr.library.rst  xr.rst
docs/source/_static/: documentation_options.js
examples/: README.md  extension_properties.py  gl_example.py  track_hmd.py
generate/: CMakeLists.txt  generate_structs.py  generate_version.py.in
samples/: print_extension_properties.py  track_hmd.py
src/docs/: conf.py  index.rst  support.rst  xr.api_layer.rst  xr.ext.rst  xr.extension.rst  xr.rst
src/generate/: CMakeLists.txt  generate_android_platform.py  generate_capi.py  generate_cfunctions.py  generate_constants.py  generate_docstrings.py  generate_enums.py  generate_exceptions.py  generate_extensions.py  generate_extensions3.py  generate_extensions_jinja.py  generate_functions.py  generate_linux_platform.py  generate_raw_functions.py  generate_structs.py  generate_typedefs.py  generate_version.py  generate_version.py.in  generate_windows_platform.py  print_openxr_version.py
src/generate/android/: CMakeLists.txt
src/generate/py_api_layer/: CMakeLists.txt  loader_interfaces.h  py_api_layer.cpp
src/generate/templates/: extension_module.py.j2
src/generate/xrg/: __init__.py  class_docstring_data.py  declarations.py  default_values.py  docstrings.py  function_docstring_data.py  managable_handles.py  manageable_handles.py  module_docstring_data.py  openxr.h  openxr_platform.h  openxr_reflection.h  registry.py  store_docstrings.py  types.py  vendor_tags.py  xrtypes.py
src/generate/xrg/headers/: openxr_platform_defines.h
src/generate/xrg/headers/vulkan/: vk_platform.h  vulkan.cppm  vulkan.h  vulkan.hpp  vulkan_android.h  vulkan_beta.h  vulkan_core.h  vulkan_directfb.h  vulkan_enums.hpp  vulkan_extension_inspection.hpp  vulkan_format_traits.hpp  vulkan_fuchsia.h  vulkan_funcs.hpp  vulkan_ggp.h  vulkan_handles.hpp  vulkan_hash.hpp  vulkan_hpp_macros.hpp  vulkan_ios.h  vulkan_macos.h  vulkan_metal.h  vulkan_ohos.h  vulkan_raii.hpp  vulkan_screen.h  vulkan_shared.hpp  vulkan_static_assertions.hpp  vulkan_to_string.hpp  vulkan_vi.h  vulkan_video.cppm  vulkan_video.hpp  vulkan_wayland.h  vulkan_win32.h  vulkan_xcb.h  vulkan_xlib.h  vulkan_xlib_xrandr.h
src/samples/: print_extension_properties.py
src/xr/: __init__.py  array_field.py  atom_methods.py  base_struct.py  base_structs.py  callback.py  cfunctions.py  classes.py  constants.py  context_object.py  custom_functions.py  enums.py  exception.py  exceptions.py  experiment.py  field_helper.py  functions.py  glfw_context_provider.py  handle.py  matrix4x4f.py  mgr.py  opengl_graphics.py  raw_functions.py  resources.py  typedefs.py  version.py
src/xr/api2/: __init__.py  event_bus.py  gl_swapchain.py  glfw_context.py  graphics_binding.py  render_context.py  session_manager.py  time_fetcher.py  two_controllers.py  xr_context.py
src/xr/api2/profiles/: LICENSE.txt
src/xr/api3/: __init__.py  event_bus.py  instance_manager.py  opengl_graphics.py  session_manager.py  time_fetcher.py  two_controllers.py
src/xr/api_layer/: __init__.py  dynamic_api_layer_base.py  layer_path.py  loader_interfaces.py  py_layer_base.py  py_layer_example.py  raw_functions.py  steamvr_linux_destroyinstance_layer.py
src/xr/api_layer/linux/: XrApiLayer_api_dump.json  XrApiLayer_best_practices_validation.json  XrApiLayer_core_validation.json
src/xr/api_layer/win32/: XrApiLayer_api_dump.json  XrApiLayer_best_practices_validation.json
src/xr/api_layer/windows/: XrApiLayer_api_dump.json  XrApiLayer_core_validation.json
src/xr/ext/: __init__.py  base_extension.py  ext_debug_utils.py  htcx_vive_tracker_interaction.py  instance_extension.py  khr_opengl_enable.py  mnd_headless.py
src/xr/ext/EXT/: __init__.py  debug_utils.py
src/xr/ext/HTCX/: htcx_vive_tracker_interaction.py  vive_tracker_interaction.py
src/xr/ext/KHR/: khr_opengl_enable.py  opengl_enable.py  opengl_es_enable.py
src/xr/extension/: XR_KHR_win32_convert_performance_counter_time.py  __init__.py
src/xr/layer/: __init__.py
src/xr/platform/: __init__.py  android.py  linux.py  windows.py  windows_time.py
src/xr/utils/: __init__.py  classes.py  context_object.py  event_dispatcher.py  glfw_context_provider.py  graphics_context_provider.py  matrix4x4f.py  opengl_graphics.py  pyside_context_provider.py  session_state_manager.py
tests/: debug_utils_synopsis.py  gl_ext_synopsis.py  run_tests.py  synopsis_debug_utils.py  synopsis_gl_ext.py  test_api_layers.py  test_array_fields.py  test_atom_methods.py  test_bool.py  test_constants.py  test_create_info.py  test_ctypes_pointer.py  test_docstring.py  test_egl.py  test_enum_field.py  test_exceptions.py  test_extension_properties.py  test_extent2Di.py  test_field_next.py  test_flags.py  test_instance_create_info.py  test_matrix4x4f.py  test_null_handle.py  test_package_import.py  test_posef.py  test_print_object.py  test_quaternionf.py  test_sequence_parameter.py  test_structure_type.py  test_vector3f.py  test_version.py  tst_enum_field.py  vive_tracker_synopsis.py
xr/: __init__.py  constants.py  functions.py  version.py
(+13 files in other folders)
