[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"
[tool.setuptools]
license-files = []
[project]
name = "pyopenxr"
dynamic = ["version"]
description = "Python bindings for OpenXR"
authors = [{ name = "Christopher Bruns", email = "cmbruns@rotatingpenguin.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
