[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"
[tool.setuptools]
license-files = []
[project]
name = "pyopenxr"
dynamic = ["version"]
dependencies = [
    "glfw",
    "numpy",
    "PyOpenGL",
]
description = "Python bindings for OpenXR"
authors = [{ name = "Christopher M. Bruns", email = "cmbruns@rotatingpenguin.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
