[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyopenxr"
dynamic = ["version"]
description = "Unofficial Python bindings for OpenXR VR/AR device access"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Christopher M. Bruns", email = "cmbruns@rotatingpenguin.com" }]
dependencies = [
    "glfw",
    "numpy",
    "PyOpenGL",
]

keywords = ["OpenXR", "VR", "AR", "bindings", "Python", "3D", "graphics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
homepage = "https://github.com/cmbruns/pyopenxr"
bug_tracker = "https://github.com/cmbruns/pyopenxr/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "xr",
    "xr.api_layer",
    "xr.api_layer.linux",
    "xr.api_layer.windows",
    "xr.ext",
    "xr.ext.HTCX",
    "xr.ext.KHR",
    "xr.library",
    "xr.platform",
    "xr.utils",
    "xr.utils.gl",
    "xr.utils.gl.glfw_util",
]

[tool.setuptools.package-data]
"*" = ["*.dll", "*.so", "*.json"]

[project.optional-dependencies]
generate = ["clang"]
test = ["pytest"]
dev = [
    "libclang==12",
    "PyOpenGL",
    "glfw",
    "numpy",
    "pytest",
    "nose2",
    "sphinx",
    "sphinx_rtd_theme",
    "twine",
]
glfw = ["glfw"]
pyside = ["PySide6"]

[tool.setuptools.dynamic]
version = {attr = "xr.version.__version__"}
