[metadata]
name = pyopenxr
version = attr: xr.version.__version__
author = Christopher M. Bruns
author_email = cmbruns@rotatingpenguin.com
description = Unofficial python bindings for OpenXR VR/AP device access
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cmbruns/pyopenxr
project_urls =
    Bug Tracker = https://github.com/cmbruns/pyopenxr/issues
classifiers =
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 4 - Beta

[options]
install_requires =
    glfw
    numpy
    PyOpenGL; sys_platform == "win32"
    PyOpenGL==3.1.6; sys_platform == "linux"
    ; setuptools is needed for pkg_resources
    setuptools
package_dir =
    =src
packages = xr, xr.library, xr.platform, xr.api_layer, xr.api_layer.windows, xr.api_layer.linux, xr.extension
; 3.5 does not support f-strings
python_requires = >=3.6

[options.package_data]
* = *.dll, *.so, *.json

[options.extras_require]
generate =
    clang
    ; clang for parsing C code
    setuptools
    ; setuptools for pkg_resources
test = pytest

[nosetests]
traverse-namespace=1
