[metadata]
name = pyopenxr
version = attr: xr.version.__version__
author = Christopher M. Bruns
author_email = cmbruns@rotatingpenguin.com
description = Unofficial python bindings for OpenXR VR/AP device access
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cmbruns/pyopenxr
project_urls =
    Bug Tracker = https://github.com/cmbruns/pyopenxr/issues
classifiers =
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 4 - Beta

[options]
install_requires =
    glfw
    numpy
    PyOpenGL
package_dir =
    =src
packages = xr, xr.library, xr.platform, xr.api_layer, xr.api_layer.windows, xr.api_layer.linux, xr.extension
python_requires = >=3.9

[options.package_data]
* = *.dll, *.so, *.json

[options.extras_require]
generate =
    clang
    ; clang for parsing C code
test = pytest

[nosetests]
traverse-namespace=1
